# ChangeLog for app-office/skrooge
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/skrooge/ChangeLog,v 1.51 2013/12/24 12:46:35 ago Exp $

  24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> skrooge-1.8.0.ebuild:
  Stable for x86, wrt bug #492674

  16 Dec 2013; Johannes Huber <johu@gentoo.org> skrooge-1.7.1.ebuild,
  skrooge-1.8.0.ebuild:
  Don't DEPEND on kde-base/kdesdk-scripts as it is masked for removal.

*skrooge-1.8.0 (09 Oct 2013)

  09 Oct 2013; Johannes Huber <johu@gentoo.org> +skrooge-1.8.0.ebuild:
  Version bump.

  30 Jun 2013; Johannes Huber <johu@gentoo.org> -skrooge-1.6.0.ebuild:
  Remove old.

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> skrooge-1.7.1.ebuild:
  Stable for x86, wrt bug #473942

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> skrooge-1.7.1.ebuild:
  Stable for amd64, wrt bug #473942

  30 May 2013; Michael Palimaka <kensington@gentoo.org> skrooge-1.6.0.ebuild,
  skrooge-1.7.1.ebuild:
  Add USE dependency default in preparation for the removal of the semantic-
  desktop USE flag.

*skrooge-1.7.1 (14 May 2013)

  14 May 2013; Johannes Huber <johu@gentoo.org> +skrooge-1.7.1.ebuild,
  -skrooge-1.7.0.ebuild:
  Version bump.

*skrooge-1.7.0 (05 May 2013)

  05 May 2013; Johannes Huber <johu@gentoo.org> +skrooge-1.7.0.ebuild:
  Version bump.

  22 Apr 2013; Michael Palimaka <kensington@gentoo.org> -skrooge-1.5.1.ebuild:
  Remove old.

  13 Apr 2013; Agostino Sarubbo <ago@gentoo.org> skrooge-1.6.0.ebuild:
  Stable for x86, wrt bug #465502

  13 Apr 2013; Agostino Sarubbo <ago@gentoo.org> skrooge-1.6.0.ebuild:
  Stable for amd64, wrt bug #465502

  13 Apr 2013; Michael Palimaka <kensington@gentoo.org> skrooge-1.6.0.ebuild:
  Add missing USE dependency on kde-base/kdepimlibs[semantic-desktop].

*skrooge-1.6.0 (10 Mar 2013)

  10 Mar 2013; Michael Palimaka <kensington@gentoo.org> +skrooge-1.6.0.ebuild,
  -skrooge-1.3.3.ebuild:
  Version bump. Remove old.
