@@ -4,23 +4,13 @@ Hash: SHA256
 DIST skrooge-1.7.1.tar.bz2 9902534 SHA256 7427c9c4a93a9c6794e6419ef225c8f512548217ab2eac7abf217f5802cd6a88 SHA512 ff3da7a7d9c20f9240af94b4fabd219be11cb7b3fa96fc341b7d79f39d5d0cb163eab0565dc07cf41bec7564376a2ad20c1b1f85f4ba92299ebc4470ecba7b6c WHIRLPOOL 97660d34b46d0c75a9cef9f29b340b1b4ae7fdc17b4120488ec778dba93d45429ce3885266d62d7bb9160e056a08aee3213ced49fc71c2699559e50c503ad5fc
 DIST skrooge-1.8.0.tar.bz2 12286047 SHA256 98c0ed6cfefd4c6c92a010a1ab9afc1ef230eacc391a45aa200901ba6fb3bf08 SHA512 cc64c47af430c52f5e341c6af8630704f33f2b1973b8f4275bf4522cc2c2925c71ced3f68557ba652c3f37b3119c1132489f55e0ec2bab551eb4eb1f7a02fb44 WHIRLPOOL 9e3bffea2651b86440ae55e03660db0f9386f259e5e470a5b6a9eede21a6dc777b4992cb7df167de7328be99ce4e5ac53b721b5ba657384b7be9acb7a0c82a33
 EBUILD skrooge-1.7.1.ebuild 1475 SHA256 deac591c8d51bb486cc0de9a257a499adeef949e92afdc2ffa09bef2b04a4c43 SHA512 88ae3a32b51e4b3338a3f1b2cc5c7f0706a51c6ec908503eb925c44bfbead07104513c7ae0bbf63efb6d4cfaab7262d24e2b327c5eaa712acbf8494fde5a335a WHIRLPOOL b1d67508caa8d12dbfd7bb8f40a6e5d65deec73442272991e88ce048549bfdf7e0e1bfab5b57221f4ab845f9a5a056b4fdac60b8a3e17ac2b100bec3274cba08
-EBUILD skrooge-1.8.0.ebuild 1472 SHA256 906bb56cd1cc22d7b5fc7039bfd0a320c8ab9da15488454c9ffdae03bb708356 SHA512 593f14d312437165101a243dbff3685f526a64776979294081b21b8cb7682e419789e07d71db5d6e9e1c47f575038ecbf67e492d91ebca7318a9820a19828bc5 WHIRLPOOL 65f16d6bd061f27a226dbcfe10e9dd1da9547514533690779c0afac5c2e48708b4ecd78f9f49453830b10cc5598f6919ed6dd320eda562d5ea6cf6bae1c6a560
-MISC ChangeLog 6905 SHA256 158a73422c1350950370edb123b3226ca7a0a3ba2a5fe99bef497c6812ca7fa8 SHA512 30b1e38b24253a0d8b9b72b378148936aa4d1a62671fc3c737b80f65102e1a6cfdefa1dcc33efa15ceb01e440ed9e7a6ddb695a37be87b8821b0b26054301eac WHIRLPOOL c5ce869f6d5e815add8d55ce3280bcbee652fcd8b5a6739642f75efaeac4eeb183b82b8b4c6311f40405075f6a44051801f485d45fb86ada3c6984b6d4eff0ad
+EBUILD skrooge-1.8.0.ebuild 1473 SHA256 4bb6b045d89fab345baf5fc51ede82e29b2cecd4c43dc5c8e3419ad2c146608e SHA512 47a22ffc0d255898a5999b75dfce1d9899ca6ce14bf3a6794ac08e50785806a89b7f91ba6b1f5b6e04df106882c06ba993d6b5701d05df2b4f25d851fa031b0e WHIRLPOOL 14b7874fdf0c62da393ffa44e4b768b123b599a56a12f0519952a062be45a99de0c7834a62f1ff00cce26a6c908801b8b025f7e6769c43a6a8ef991160ee1b69
+MISC ChangeLog 7004 SHA256 ca280aed0d0bef4756b20f556732b4bff1030ed42d60f9383c120dbbad973c70 SHA512 7281528d330fd8978f802debcdd3b9e06227453cfa774e3ad715464eb2a9cb8d740549f1bf0580bdbf3f9fa32ffa48a4a5b47d56f65daa93f4778fc58f88a42f WHIRLPOOL 0a3df2cfe195cb3572e4cb048789b4797d9ef1f1c17da179499fff9ffdc664330a24bc7a55e802a524eb319ee7c34dd16c87f66bcde69897212362730563e220
 MISC metadata.xml 156 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a SHA512 0dcd7cfb246c4518ed1653cb06f5d2c7220ea90160a4b1a1da43edf5124b76d7104fe35a545178b6b3df19f5f3a3eb3f31ac1b4d169e3ca90d78be3e20e58b05 WHIRLPOOL df162e3d521df7decdd84d980e4bc71531bb8e05486c07102c554b529c10a1fb3374dda79d56b13bc037a2d230b4b8ff25702c7a1b86d703a24e8bfe7fe57642
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSuYIuAAoJELp701BxlEWf8pIP/3GzoBy907UGwX/abaAf32gs
-zdyCk1O1BLG51yFt4xwogdPyuUUUXHZofQIwJz+s+6A8zAM1ag3cnA9WgOIel9WO
-CMPFlEQQ4o75VuvJI4qK3t4rKRnvv5Y0F+r0oahfsSKQD7MqdOlo+jHYtiWvUVvl
-fbrD+eNDb7IQIphuaJFx7fk7FPjYBA/YMLyMi9fHwM+raSGFQUIDay5h3mxGrRnE
-1jhDAMM+0j3ySnxOW/nEGwcAgKY62h4wC6HA9JezHOLlT7XNizdzStvSzgSLzSyy
-uHvI8EayUZknh9w1E6/8mtCbblkS3gfKWSSDKADVPWWAepyZHqsykctG6pIJ7S4v
-l/2+Tin7o11BKSz2d9gOAMJqz5WHR6qR/33WRiFxI22MU+J2jduq/OCa9BxiPMiv
-Q7Wi02HT+7KWG/z7nj7kwk3COLAsNr1FmQdqoV0omeuzKnnveLX5dWi29qvE5QGh
-iXHwB56GiZCuxhj5/Sir3gUYLeVbwpGpZngcZfT03VNP19Ur1zi18+GpO6Jl61tQ
-8dJ3DL2rCbC1TkLChcog1MsfH45cMbYhXLQE0YDv8mxRXky33MTH+5mgUvq3VtL7
-TjTsz32XUE7OWwGhXxwploa9S5KvPcP41xkwhdcyoAVwVGEVoy6hZ6/OpDhWX9SP
-hMyaWA1tVpqYstmY0eVL
-=rL3u
+iEYEAREIAAYFAlLbslsACgkQCaWpQKGI+9QwvQCaA+ysQmForKdU79b9+SNqUgFJ
+wYAAn0dxBXKEt/BomBFk2TSqgviOfUHe
+=6Uau
 -----END PGP SIGNATURE-----
