@@ -1,6 +1,9 @@
 # ChangeLog for app-office/skrooge
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/skrooge/ChangeLog,v 1.51 2013/12/24 12:46:35 ago Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-office/skrooge/ChangeLog,v 1.52 2014/01/19 11:09:14 pacho Exp $
+
+  19 Jan 2014; Pacho Ramos <pacho@gentoo.org> skrooge-1.8.0.ebuild:
+  amd64 stable, bug #492674
 
   24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> skrooge-1.8.0.ebuild:
   Stable for x86, wrt bug #492674
